<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:padding="20sp">

    <TextView
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textColor="#525FE1"/>
    <TextView
        android:text="@string/welcome_back_login_into_your_details"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableLeftCompat="@drawable/baseline_email"
        android:drawablePadding="10dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter your email address"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableLeftCompat="@drawable/baseline_password"
        android:drawablePadding="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_disabled_visible_24"
            android:drawableTint="#777373"
            android:hint="Enter your password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:text="Forgot password?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/or"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_google"
        android:text="Continue with Google"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/google_logo_svg"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="#77C3C6ED"/>
    <Button
        android:id="@+id/btn_facebook"
        android:text="Continue with Facebook"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/facebook_logo_svg"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="#77C3C6ED"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="383dp"
        android:layout_height="55dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#525FE1"
        android:text="Signin"
        android:textSize="18dp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:text="Don't have an account?"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/textViewSignUp"
            android:text="Signup"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#525FE1"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>


</LinearLayout>